[package]
name = "flugra"
version = "0.1.0"
edition = "2021"
description = "A dependency-aware execution manager for native SQL units"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
